src/components/App.css
/* ... */
a.result .contenu ul > div:last-child h3 {
   color: rgba(0, 0, 0, 0.87); font-size: 13px; font-weight: 700; 
   line-height: 22px; display:block; margin:3px 0 5px 0;
}

a.result .contenu ul > div:last-child p {
   color: rgba(0, 0, 0, 0.54);   font-size: 0.85rem;   font-weight: 400; 
   line-height: 1.46429em; margin: 0;  display: block;
}

a.result .contenu ul > div:first-child { position:relative;}
a.result .contenu ul > div:first-child > svg { position:absolute; top:-16px; right:16px;font-size:14px; }

iframe.ontoSearch { width:calc(100% - 10px); border:none; margin-left:10px; height:500px;
   box-shadow:0 0 5px rgba(0,0,0,0.5); background-color:rgba(0,0,0,0.015);}

.data .anno,svg.annoticon { vertical-align: -9px;margin-left:5px; color:rgba(0,0,0,0.0); display:none;}
h2:hover svg.annoticon,h4:hover svg.annoticon {  color:rgba(0,0,0,0.5); cursor:pointer;}
h2:hover svg.annoticon:hover,h4:hover svg.annoticon:hover { color:rgba(0,0,0,0.65); }
.data .anno span:not(.lang) {/*color : rgba(229, 74, 53,1);*/ cursor:pointer; color:rgba(0,0,0,0.5);}
.data .anno span:not(.lang):hover { text-decoration:underline; color:rgba(0,0,0,0.65); }

.data .faded { display:inline-block; cursor:pointer; padding:3px; border-radius:16px;
   background-color:rgba(0, 0, 0, 0.1);
}
.data .faded.score0 { background-color:rgba(255, 205, 3, 0.4);border:1px dashed rgba(167, 134, 1, 0.4);}
.data .faded.score1 { background-color:rgba(17, 173, 17, 0.3);border:1px solid rgba(36, 106, 36, 0.4);}

/* ------------------------------------------------------------------------------------------------------------------------ resource */

h4 { margin-top:0px;margin-bottom:0px;font-size:24px; }
/* h4 + h4 { margin-top:5px;}  */

/* .resource .data h4.label,.resource .data .ulink, .resource .data .urilink,.resource .data h4 span[lang] { letter-spacing:0.25px; } */

[lang$="ewts"] { text-transform:none !important; }


h2:not(:hover) .lang,
h4:not(:hover) > .lang
{ display:none; }

.resource .loader { position:absolute; }
.resource #fond .loader { position:static; }


/* -+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ resource */

.resource > .index { width:15%; padding-top:10px; position:fixed; }
.resource > :not(.index) { width:85%; padding-left:15%;  }

.resource > .index .title { display:block; }

.resource > .index .title h2 { max-width:100% !important; width:100% !important; background:none !important; box-shadow:none !important;height:auto; 
   display:block !important; font-size:14px; font-weight:700;
}

.resource > .index .title h2:not(:first-child) { margin-top:20px; }

.resource > .index .title h2 a { display:block; }
.resource > .index .title h2 .T::before { content:none !important; width:40px; background-size:80% auto; background-position:center; margin-right:16px;}
.resource > .index .title h2 .RID { display:none !important; }

.resource > .index h3 { /*margin-left:56px;*/ margin-top:8px; font-size:12px; letter-spacing:0px; display:block;}

.resource > .index h3 a { color:#343434; text-decoration: none; }

/* .resource > :not(.index) > .title h2 .T { margin-bottom:15px; } */
/* .resource > :not(.index) > .title h2 .T::before { display:none; } */
/* .resource  > :not(.index) > .title h2 .RID { left:0; } */

#main-info, #resources, #ext-info {
   scroll-margin: 100px;
}

/* ------------------------------------------------------------------------------------------------------------------------ header */

.resource .data#head { background-color:#ffffff; padding:35px; padding-bottom:45px;}


.resource .data .header { width:100%; height:245px; background:#fce08d; display:flex;align-items:center;justify-content: center; position:relative; }
.resource .data .header::before { content:' '; width:130px; height:130px; background:white;border-radius:50%; 
   background-size:auto;background-repeat:no-repeat; background-position: center;}

.resource .data .header .src { position: absolute; right: 0; bottom: 20px; width: 34px;  height: 60px; background-color: #172832; line-height:58px; }
.resource .data .header .src.orig { cursor:pointer;}
.resource .data .header .src img { background-color: white; width:calc(100% - 3px * 2 - 2px * 2);padding:2px; margin-left:3px; display:inline-block; 
vertical-align:middle;}
.resource .data .header .src img[src^="/BL."] { padding:0;margin:0;width:100%;}
   /* background-size:90% auto;background-position:center;background-repeat:no-repeat; } */

.resource .data.related .header::before,
.resource.work .data .header::before { background-image:url("/icons/work.png");  }
.resource.instance .data .header::before { background-image:url("/icons/instance_50b.png"); background-size:50px auto; }
.resource.images .data .header::before { background-image:url("/icons/image.svg"); }
.resource.person .data > .header::before { background-image:url("/icons/person.png");  }
.resource.topic .data > .header::before { background-image:url("/icons/topic.png");  }
.resource.etext .data > .header::before { background-image:url("/icons/etext.png");  }
.resource.lineage .data > .header::before { background-image:url("/icons/lineage.png");  }

.resource .data .header.loading::before { background-image:none !important; }

/*
.resource .data [data-prop^="adm:seeOther"]:not(#a):not(.a):not(#b),
.resource .data [data-prop^="adm:original"]:not(#a):not(.a):not(#b),
.resource .data [data-prop^="owl:sameAs"]:not(#a):not(.a):not(#b) 
{
   display:none !important;
}
*/

/* ------------------------------------------------------------------------------------------------------------------------ title/tabs */

.resource .title h2:first-of-type:last-of-type { display:none; }

.resource .title { display:flex; position:relative; }

.resource .title h2:first-child.on { box-shadow:4px 0px 2px -2px rgba(0,0,0,0.125) ; }
.resource .title h2:first-child:not(.on) { box-shadow:4px 0px 2px -2px rgba(0,0,0,0.125) ; }
/* ... */

